# new-thinbt

./: .gitignore  CMakeLists.txt  CODE_ISSUES.md  README.md  build_remote.sh  design.md
.claude/: settings.json
.claude/rules/: c-style.md  design-review.md  git.md  no-ai-comments.md  plan-before-code.md
Testing/: remote.py  run_remote_perf.sh
docs/superpowers/plans/: 2026-06-09-network-layer-plan.md  2026-06-09-thinbt-implementation.md
docs/superpowers/specs/: 2026-06-09-loopback-fix-design.md  2026-06-09-network-layer-design.md  window-6-cli-tracker.md  window-7-deployment-test.md
src/cdc/: fastcdc.cpp  fastcdc.hpp
src/cli/: cli_commands.cpp  cli_commands.hpp  tbt.cpp
src/common/: file_util.cpp  file_util.hpp  hash.cpp  hash.hpp  net_util.cpp  net_util.hpp  platform.hpp
src/daemon/: chunk_assembler.cpp  chunk_assembler.hpp  file_read_pool.cpp  file_read_pool.hpp  io_worker.cpp  io_worker.hpp  ipc_server.cpp  ipc_server.hpp  main.cpp  peer_manager.cpp  peer_manager.hpp  peer_session.cpp  peer_session.hpp  protocol.cpp  protocol.hpp  scheduler.cpp  scheduler.hpp  segment_io.cpp  segment_io.hpp  sendfile_pool.cpp  sendfile_pool.hpp  task_manager.cpp  task_manager.hpp  tracker_acceptor.cpp  tracker_acceptor.hpp  tracker_client.cpp  tracker_client.hpp  tracker_server.cpp  tracker_server.hpp  verify_worker.cpp  verify_worker.hpp
src/seed/: seed_reader.cpp  seed_reader.hpp  seed_writer.cpp  seed_writer.hpp  tseed.hpp
tests/: test_chunk_assembler.cpp  test_fastcdc.cpp  test_incremental_update.cpp  test_loopback.cpp  test_multinode.cpp  test_peer_manager.cpp  test_peer_session.cpp  test_protocol.cpp  test_scheduler.cpp  test_seed.cpp  test_segment_io.cpp  test_task_manager.cpp  test_tracker_client.cpp
